plex/pms-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms
  template:
    metadata:
      labels:
        app: pms
    spec:
      containers:
      - name: pms
        image: plexinc/pms-docker:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: data
          mountPath: /data
      volumes:
      - name: config
        hostPath:
          path: /data/pms/config
          type: Directory
      - name: transcode
        hostPath:
          path: /data/pms/transcode
          type: Directory
      - name: data
        hostPath:
          path: /data/pms/data
          type: Directory
