plex/pms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-svc
spec:
  ports:
    - port: 32400
      targetPort: 32400
  selector:
    app: pms
